--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,11 @@
-# Compiled class file
-*.class
+package proyecto
 
-# Log file
-*.log
+public class proyecto )
 
-# BlueJ files
-*.ctxt
+public static void main (String [] ) {
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+System.out.println("hola mundo");
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-asj
+}
+  }
